fixed spacing and added basics for footer

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -21,12 +21,16 @@ body {
   display: grid;
   place-items: center;
   align-content: center;
-  min-height: 100vh;
+  min-height: 80vh;
   align-content: center;
 }
 
-.aboutme h1 {
+.aboutme img{
+  padding: 30px;
+}
+.aboutme h1{
   padding: 2%;
+  text-underline-position:below ;
 }
 
   nav ul {
